--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.31'
+    ext.kotlinVersion = '1.2.31'
+    ext.androidSupportVersion = '27.1.1'
+    ext.retrofitVersion = '2.4.0'
+    ext.okhttpVersion = '3.10.0'
+    ext.lifecycleVersion = '1.1.1'
+    ext.archDbVersion = '1.1.1'
+    ext.pluginVersion = '3.1.2'
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
