--- a/app/config/prod.properties
+++ b/app/config/prod.properties
@@ -1,3 +1,3 @@
 # Replace these values with the production environment values
 base_url="https://content.guardianapis.com/"
-api_key="test"
+api_key="55e107d9-40c4-43e9-90e6-f8d5eee6d241"
