--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,9 @@ dependencies {
     // explicitly depend on RxJava's latest version for bug fixes and new features.
     implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
 
-
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    
     testImplementation "com.squareup.okhttp3:mockwebserver:$okhttpVersion"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
